<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context="com.example.diandian.MainActivity" >
	<Button 
	    android:id="@+id/btnMenu"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/main_a_btn_menu"
	    />
	<Button 
	    android:id="@+id/btnOrder"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/main_a_btn_order"
	    />
	<Button 
	    android:id="@+id/btnMine"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/main_a_btn_mine"
	    />

</LinearLayout>
