<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context="com.example.diandian.LoginActivity" >

    <EditText
        android:id="@+id/etLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_a_et_loginname" 
        />
    <EditText
        android:id="@+id/etLoginPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/login_a_et_loginpsw" 
        />
	<Button 
	    android:id="@+id/btnLogin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login_a_btn_login"
	    />
</LinearLayout>
